fixed alignment issues on the schedule.php. the input works

--- a/style.css
+++ b/style.css
@@ -435,14 +435,50 @@ a{
 	border-radius: 0.2em;
 }
 
+
+
+
+/* --- schedule.php page ---- */
+
+
 .schedule_selectors{
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
 	position: relative;
 	font-weight: bold;
 	font-size: 2em;
 	margin: 0.5em;
 	float: left;
+}
+
+.schedule_selectors input{
+	border-width: 0px 4px 0px 4px;
+	border-color: #009688;
+	border-style: solid;
+	height: 2.5em;
+	font-family: helvetica;
+	float: right;
+	margin-left: 20px;
+	
+}
+
+#schedule_submit{
+	border-width: 0px 4px 0px 4px;
+	border-color: #009688;
+	border-style: solid;
+	height: 2.5em;
+	font-family: helvetica;
+	float: right;
+	margin-left: 20px;
+	transition: background-color .3s, color .5s, transform .5s;
+}
+
+#schedule_submit:hover{
+	background-color: #009688;
+	color: #fff;
+	transform: scale(1.1);
+}
+
+#timezone{
+	appearance: none;
 }
 
 .steam_link_button{
